[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "antspyx"
version = "0.5.3"
description = "A fast medical imaging analysis library in Python with algorithms for registration, segmentation, and more."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Brian B. Avants", email = "stnava@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "pandas",
    "pyyaml",
    "numpy",
    "scikit-image",
    "scikit-learn",
    "statsmodels",
    "webcolors",
    "matplotlib",
    "Pillow",
    "nibabel",
    "requests"
]

[project.urls]
Homepage = "https://github.com/antsx/antspy"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp311"

cmake.args = []

wheel.packages = ["ants"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
