[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2,<2.6"]
build-backend = "scikit_build_core.build"

[project]
name = "antspyx"
version = "0.6.1"
description = "A fast medical imaging analysis library in Python with algorithms for registration, segmentation, and more."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Brian B. Avants", email = "stnava@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pandas",
    "pyyaml",
    "numpy",
    "statsmodels",
    "webcolors",
    "matplotlib",
    "Pillow",
    "requests",
    "scikit-learn",
    "scipy<1.16"
]

[project.urls]
Homepage = "https://github.com/antsx/antspy"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

cmake.args = []

wheel.packages = ["ants"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

